2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* cpu.c, cpu.h, cpuModel.S, cpuModel.h, displayCpu.c, idtr.S, page.c:
	URL for license changed.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2002-12-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Don't include @RTEMS_BSP@.cfg.
	Eliminate *_O_FILES.
	* configure.ac: Remove RTEMS_CHECK_CUSTOM_BSP.

2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_BSP_CACHE.

2002-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add RTEMS_PROG_CCAS.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use .$(OBJEXT) instead of .o.

2002-07-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* cpuModel.S: Include <rtems/score/registers.h> instead of
	<libcpu/registers.h>.
	* registers.h: Removed.
	* Makefile.am: Remove registers.h.

2002-03-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* cache.c: Include <rtems/score/registers.h> instead of
	<libcpu/registers.h>.
	* cpu.h: Ditto. Remove parts moved to score/cpu/i386.
	* registers.h: Add BIG-FAT warning.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-03-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* cpuModel.h: PR 146. 
	Adding guards. Remove unnecessary headers.

2002-01-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
