@@ -1,3 +1,7 @@
+2004-02-03	Joel Sherrill <joel@OARcorp.com>
+
+	* Makefile.am: Removed.
+
 2003-09-04	Joel Sherrill <joel@OARcorp.com>
 
 	* cpu.c, cpu.h, cpuModel.S, cpuModel.h, displayCpu.c, idtr.S, page.c:
